samples/_failures_safe/1761130701_99761c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9b0f3e11.c: In function ‘tokenize_input’:
./samples/SAFE/__tmp_9b0f3e11.c:144:18: error: expected ‘;’ at end of input
  144 |             break
      |                  ^
      |                  ;
./samples/SAFE/__tmp_9b0f3e11.c:144:13: error: expected declaration or statement at end of input
  144 |             break
      |             ^~~~~
./samples/SAFE/__tmp_9b0f3e11.c:144:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9b0f3e11.c:144:13: error: expected declaration or statement at end of input
